/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java library project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    id 'java-library'
    alias libs.plugins.checker.framework
}

repositories {
    mavenCentral()
}

dependencies {

    testImplementation libs.junit.jupiter, libs.logback.classic, libs.assertj
    testImplementation project(':chameleon-testing')

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    api libs.hibernate.orm.core
    implementation libs.mongodb.sync.java.driver, libs.sl4j.api, libs.spotbugs.annotations

}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

checkerFramework {
    skipCheckerFramework = true // set 'true' to skip it!
    excludeTests = true
    checkers = [
            'org.checkerframework.checker.nullness.NullnessChecker'
    ]
    extraJavacArgs = [
            '-AskipUses=^org\\.hibernate\\.omm\\.ast\\.AbstractMongoSqlAstTranslator$', //skipped for it comes from Hibernate
            "-Astubs=$projectDir/src/main/resources/stubs"
    ]
}
